# discord_atumaru_bot

./: Dockerfile  README.md  docker-compose.yml  main.py  message_generator.py  pyproject.toml  requirements.txt  sep.py  test_message_generator.py
.github/workflows/: deploy.yml  test.yml
