[tool.poetry]
name = "discord_atumaru_bot"
version = "0.1.0"
description = "Discordで特定の人数を募集するBot"
authors = ["Haruhiko Takada <haruhiko.takada@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
